// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Date interval component - en Should render DateInterval 1`] = `
<Memo()
  end={2000-02-01T00:00:00.000Z}
  start={2000-01-01T00:00:00.000Z}
>
  from January 1 to February 1, 2000
</Memo()>
`;

exports[`Date interval component - ru Should render DateInterval 1`] = `
<Memo()
  end={2000-02-01T00:00:00.000Z}
  start={2000-01-01T00:00:00.000Z}
>
  с 1 January по 1 February 2000
</Memo()>
`;
